# investIQ

./: .gitignore  README.md  index.html  privacy-policy.html  pyproject.toml
app/: main.py
app/services/: openai_service.py  twitter_service.py
app/ui/: streamlit_ui.py
investIQ.git/: config  packed-refs
investIQ.git.bfg-report/2024-10-28/21-35-38/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
investIQ.git/info/: refs
investIQ.git/objects/info/: commit-graph  packs
investIQ.git/objects/pack/: pack-b1693d17397c395affa7c395f4d837206b9a0b0d.bitmap  pack-b1693d17397c395affa7c395f4d837206b9a0b0d.idx  pack-b1693d17397c395affa7c395f4d837206b9a0b0d.pack
tests/: test_openai_service.py  test_twitter_service.py
